--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <html>
 <head>
-<title>Example of marquee tag</title>
+<title>Example of hr tag</title>
 </head>
 <body>
-<center><marquee width=50%>
-<img src=1.jpg height=100 width=100>
-<img src=2.jpg height=100 width=100>
-<img src=3.jpg height=100 width=100>
-</marquee></center>
-<br><br>
-<center><marquee height=100% direction=up>
-<img src=1.jpg height=100 width=100><br>
-<img src=2.jpg height=100 width=100><br>
-<img src=3.jpg height=100 width=100><br>
-</marquee>
+Welcome to HTML
+<hr size=5 color=#f2a1b3>
+Welcome to HTML
+<hr size=5 color=purple width=50% align=left>
+Welcome to HTML
+<hr size=5 color=tan width=250 align=right>
 </body>
 </html>
