--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <html>
 <head>
-<title>Example of marquee tag</title>
+<title>Example of Unordered list</title>
 </head>
 <body>
-<center><marquee width=50%>
-<img src=1.jpg height=100 width=100>
-<img src=2.jpg height=100 width=100>
-<img src=3.jpg height=100 width=100>
-</marquee></center>
+<h1> Mobile Operang System</h1>
+<ul>
+<li> Android
+<li> Blackberry
+<li> iPhone
+<li> Windows phone
+</ul>
 <br><br>
-<center><marquee height=100% direction=up>
-<img src=1.jpg height=100 width=100><br>
-<img src=2.jpg height=100 width=100><br>
-<img src=3.jpg height=100 width=100><br>
-</marquee>
+<h1> Mobile Manufacturers </h1>
+<ul>
+<li type=square>Samsung
+<li type=square> HTC
+<li> Micromax
+<li type=circle>Apple
+</ul>
 </body>
 </html>
+
